# ebird-notebooks

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  LICENSE.txt  README.md  README.rst  justfile  pyproject.toml  requirements.txt  setup.py
checklists/: admin.py  apps.py
checklists/loaders/: __init__.py  api.py
checklists/locale/en/LC_MESSAGES/: django.po
checklists/management/commands/: load_api.py
config/: settings.py  urls.py  wsgi.py
data/downloads/: ebird_basic_dataset_sample.csv
docs/: conf.py  index.rst  license.rst  quickstart.rst
ebird/db/: loaders.py  settings.py
notebooks/: GettingStarted.ipynb  getting-started.ipynb  location_basics.ipynb  notebook_basics.ipynb  working_with_checklists.ipynb  working_with_ebird_api.ipynb  working_with_ebird_basic_dataset.ipynb  working_with_my_ebird_data.ipynb  working_with_observations.ipynb  working_with_the_database.ipynb
notebooks/cleaning-api-data/: make-location-names-shorter.ipynb
notebooks/ebird-api-basics/: available-locales.ipynb  getting-started.ipynb
notebooks/locations/: 01-long-names-short-names.ipynb  02-coordinates-in-names.ipynb  03-hotspots-vs-private.ipynb
scripts/: load.py
server/: settings.py  wsgi.py
src/ebird/: settings.py
src/ebird/db/: models.py
src/ebird/notebooks/: loaders.py  queries.py  readers.py  settings.py
src/main/: settings.py
src/main/db/: loaders.py  models.py
templates/: checklists.html  highest-counts.html
templates/location_basics/: names-table.html
tests/: conftest.py  factories.py  test_checklist_query.py  test_observation_query.py
