[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0"]

[project]
name = "ebird-notebooks"
version = "0.0.0"
description = "Jupyter notebooks for analysing eBird checklists"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ebird-api>=3.0.7",
    "jupyterlab>=4.2.5",
    "notebook>=7.2.2",
    "python-cron>=1.0.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.uv]
dev-dependencies = [
    "bump-my-version>=0.28.1",
    "pre-commit>=4.0.1",
    "ruff>=0.8.0",
    "rust-just>=1.38.0",
]

[tool.bumpversion]
current_version = "0.0.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
ignore_missing_version = false
tag = true
sign_tags = true
tag_name = "v{new_version}"
tag_message = "New version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "New version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "src/ebird/notebooks/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = "## [{new_version}] - {now:%Y-%m-%d}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "version: {current_version}"
replace = "version: {new_version}"

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "^date-released: \\d{{4}}-\\d{{2}}-\\d{{2}}$"
replace = "date-released: {now:%Y-%m-%d}"
regex = true
